--- a/.github/workflows/MakeRelease.yaml
+++ b/.github/workflows/MakeRelease.yaml
@@ -32,7 +32,7 @@ jobs:
             ~/.cargo/registry/index/
             ~/.cargo/registry/cache/
             ~/.cargo/git/db/
-          key: ${{ runner .os }}-cargo-
+          # key: ${{ runner .os }}-cargo-
 
       - name: Install rust toolchain
         uses: actions-rs/toolchain@v1
@@ -108,7 +108,7 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Cargo cache
         uses: actions/cache@v3
@@ -118,7 +118,7 @@ jobs:
             ~/.cargo/registry/index/
             ~/.cargo/registry/cache/
             ~/.cargo/git/db/
-          key: ${{ runner.os }}-cargo-
+          # key: ${{ runner.os }}-cargo-
 
       - name: Install rust toolchain
         uses: actions-rs/toolchain@v1
@@ -131,19 +131,19 @@ jobs:
           cd ci
           cargo run --bin check-asset
 
-      - name: Check core
-        uses: actions/checkout@v3
-        with:
-          repository: 'niuhuan/jasmine-rs-core'
-          token: ${{ secrets.GH_TOKEN }}
-          path: 'native'
+      # - name: Check core
+      #   uses: actions/checkout@v3
+      #   with:
+      #     repository: 'niuhuan/jasmine-rs-core'
+      #     token: ${{ secrets.GH_TOKEN }}
+      #     path: 'native'
 
       - name: Cache Flutter dependencies (Linux/Android)
         if: steps.check_asset.outputs.skip_build != 'true' && matrix.config.host == 'ubuntu-latest'
         uses: actions/cache@v3
         with:
           path: /opt/hostedtoolcache/flutter
-          key: ${{ runner.os }}-flutter
+          # key: ${{ runner.os }}-flutter
 
       - name: Setup flutter
         if: steps.check_asset.outputs.skip_build != 'true'
