--- a/.github/workflows/MakeRelease.yaml
+++ b/.github/workflows/MakeRelease.yaml
@@ -32,7 +32,7 @@ jobs:
             ~/.cargo/registry/index/
             ~/.cargo/registry/cache/
             ~/.cargo/git/db/
-          # key: ${{ runner .os }}-cargo-
+          key: ${{ runner .os }}-cargo-
 
       - name: Install rust toolchain
         uses: actions-rs/toolchain@v1
@@ -118,7 +118,7 @@ jobs:
             ~/.cargo/registry/index/
             ~/.cargo/registry/cache/
             ~/.cargo/git/db/
-          # key: ${{ runner.os }}-cargo-
+          key: ${{ runner.os }}-cargo-
 
       - name: Install rust toolchain
         uses: actions-rs/toolchain@v1
@@ -143,7 +143,7 @@ jobs:
         uses: actions/cache@v3
         with:
           path: /opt/hostedtoolcache/flutter
-          # key: ${{ runner.os }}-flutter
+          key: ${{ runner.os }}-flutter
 
       - name: Setup flutter
         if: steps.check_asset.outputs.skip_build != 'true'
